--- a/index.html
+++ b/index.html
@@ -6,33 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Roxanne Alveyra | Web Developer</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
   <!-- main logo / nav -->
-  <nav>
-    <label class="logo">Roxanne Alveyra</label>
-      <ul>
-      <li><a href="">About me</a></li>
-      <li><a href="">Work</a></li>
-      <li><a href="">Contact Me</a></li>
-      </ul>
-
-
-  </nav>
-
+  <div class="logo">
   <header>
-
-    
-
-    
+    <div class="logo">
+      <h1>Roxanne Alveyra</h1>
+     </div>
+     <nav>
+      <nav>
+          <ul>
+          <li><a href="">About me</a></li>
+          <li><a href="">Work</a></li>
+          <li><a href="">Contact Me</a></li>
+          </ul>
+      </nav>    
   </header>
-
+</div>
   <!-- hero banner -->
-  <section class="hero-banner">
+  <section class="hero-banner" text-left>
     <div>
-      <h2>Cool subtitle here!</h2>
+      <h2>My Portfolio</h2>
     </div>
   </section>
 
@@ -40,6 +41,7 @@
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam distinctio, nemo consectetur illo ea magni earum atque, tempora, odio aspernatur eos sequi reiciendis in dolorem iste quasi sint voluptatibus suscipit. Amet corrupti exercitationem ratione nisi deleniti assumenda totam inventore perferendis cumque eius fuga illo qui, doloremque voluptate dolor officia.</p>
     </section>
 
     <!-- portfolio container -->
@@ -52,6 +54,8 @@
       <h2>Contact Me</h2>
     </section>
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+ 
 </body>
 
 </html>
